@@ -1,0 +1,3 @@
+if mods["SchallCircuitGroup"] then
+  data.raw.item["recipe-combinator-main"].subgroup = "circuit-combinator"
+end
