@@ -8,6 +8,7 @@
   "factorio_version": "2.0",
   "dependencies": [
     "base >= 2.0.0",
-    "recipe_combinator >= 0.1.2"
+    "recipe_combinator >= 0.1.2",
+    "? SchallCircuitGroups >= 2.0.0"
   ]
 }
